apps/base/pgadmin4/ingressroute.yaml
---
# pgAdmin4 IngressRoute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin4
  namespace: pgadmin4
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pgadmin.local`)
      kind: Rule
      services:
        - name: pgadmin4
          port: 80
